cros: Make sure the submit button state is initialized correctly

Fixes a regression since [1]. Prior to that |LoginPasswordView| relied
on |LoginAuthUserView| to call Clear() to initialize the states. Now
the initialization is moved to the ctor of the password view.

[1] https://chromium-review.googlesource.com/c/chromium/src/+/688734

Bug: 795237
Change-Id: I80892ad097a4f0152230921c8b264a9777e9e62e
Reviewed-on: https://chromium-review.googlesource.com/845319
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526876}
Former-commit-id: c61be25d1b7c197899d4a4097c1a8561f70e07dd