ash/login/ui/login_password_view_test.cc
@@ -58,6 +58,42 @@ class LoginPasswordViewTest : public LoginTestBase {
 
 }  // namespace
 
+// Verifies that the submit button updates its UI state.
+TEST_F(LoginPasswordViewTest, SubmitButtonUpdatesUiState) {
+  LoginPasswordView::TestApi test_api(view_);
+  ui::test::EventGenerator& generator = GetEventGenerator();
+
+  // The submit button starts with the disabled state.
+  EXPECT_TRUE(is_password_field_empty_);
+  EXPECT_FALSE(test_api.submit_button()->enabled());
+  // Enter 'a'. The submit button is enabled.
+  generator.PressKey(ui::KeyboardCode::VKEY_A, 0);
+  EXPECT_FALSE(is_password_field_empty_);
+  EXPECT_TRUE(test_api.submit_button()->enabled());
+  // Enter 'b'. The submit button stays enabled.
+  generator.PressKey(ui::KeyboardCode::VKEY_B, 0);
+  EXPECT_FALSE(is_password_field_empty_);
+  EXPECT_TRUE(test_api.submit_button()->enabled());
+
+  // Clear password. The submit button is disabled.
+  view_->Clear();
+  EXPECT_TRUE(is_password_field_empty_);
+  EXPECT_FALSE(test_api.submit_button()->enabled());
+
+  // Enter 'a'. The submit button is enabled.
+  generator.PressKey(ui::KeyboardCode::VKEY_A, 0);
+  EXPECT_FALSE(is_password_field_empty_);
+  EXPECT_TRUE(test_api.submit_button()->enabled());
+  // Set the text field to be read-only. The submit button is disabled.
+  view_->SetReadOnly(true);
+  EXPECT_FALSE(is_password_field_empty_);
+  EXPECT_FALSE(test_api.submit_button()->enabled());
+  // Set the text field to be not read-only. The submit button is enabled.
+  view_->SetReadOnly(false);
+  EXPECT_FALSE(is_password_field_empty_);
+  EXPECT_TRUE(test_api.submit_button()->enabled());
+}
+
 // Verifies that password submit works with 'Enter'.
 TEST_F(LoginPasswordViewTest, PasswordSubmitIncludesPasswordText) {
   LoginPasswordView::TestApi test_api(view_);
